--- a/style.css
+++ b/style.css
@@ -78,24 +78,80 @@ body{
 .h1inicio button:hover{
     background: rgb(8, 167, 167);
 }
-.menu2{
-    padding: 80px;
+.container{
+    position: relative;
+    padding: 15px;
+    max-width: 640px;
+    margin: 0 auto;
+}
+.gallery-wrapper{
+    overflow-x: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+.gallery-wrapper::-webkit-scrollbar{
+    display: none;
+}
+.gallery{
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 15px;
+}
+.gallery img{
+    width: 400px;
+    height: 450px;
+}
+.arrow-left, .arrow-right{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: auto;
+    bottom: 0;
+    font-size: 15px;
+    line-height: 250px;
+    width: 30px;
+    color: white;
+    cursor: pointer;
+    border: none;
+    background: linear-gradient(to left, transparent 0%, black 200%);
+    opacity: 0.7;
+    transition: all 400ms ease-in-out;
+}
+.arrow-right{
+    left: auto;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to right, transparent 0%, black 200%);
+    transition: all 400ms ease-in-out;
+}
+.arrow-left:hover, .arrow-right:hover{
+    opacity: 2;
+}
+.item{
+    width: 250px;
+    height: 250px;
+    flex-shrink: 0;
+    opacity: 0.4;
+    border: 3px solid transparent;
+    transition: all 600ms ease-in-out;
+}
+.current-item{
+    opacity: 1;
+    border: 3px solid teal;
+   box-shadow: 0 0 10px teal;
 }
 .menu2 li a {
-    font-size: 20px;
+    font-size: 18px;
 }
 .menu2 button:hover{
     background: rgb(8, 167, 167);
 }
 .menu2 button{
-    margin: 10px;
-    padding: 15px;
     text-align: center;
     background: teal;
-    border-radius: 4%;
+    border-radius: 5%;
     box-shadow: 3px 3px 1px 0px rgba(0, 0, 0, 0.386)
 }
-
 
 .sections {
     width: 100%;
@@ -217,3 +273,26 @@ body{
       transform: translate3d(0,0,0);
     }
   }
+.js-faq dd{
+    display: none;
+}
+.js-faq dt::after{
+    content: ' ▼';
+}
+.js-faq dt.ativo::after{
+    content: ' ▲';
+}
+.js-faq dd.ativo{
+    display: block;
+    animation: slideDown .5s forwards;
+}
+@keyframes slideDown{
+  from{
+    opacity: 0;
+    max-height: 0;
+  }
+  to{
+    opacity: 1;
+    max-height: 200px;
+  }
+}
