--- a/style.css
+++ b/style.css
@@ -73,7 +73,13 @@ body{
     background: teal;
     border-radius: 4%;
     display:inline-flex;
-    box-shadow: 3px 3px 1px 0px rgba(0, 0, 0, 0.386)
+    box-shadow: 3px 3px 1px 0px rgba(0, 0, 0, 0.386);
+    list-style: none;
+    
+}
+.h1inicio button a{
+    text-decoration: none;
+    color: black;
 }
 .h1inicio button:hover{
     background: rgb(8, 167, 167);
@@ -248,6 +254,7 @@ body{
     font-family: 'IBM Plex Mono', monospace;
     font-weight: bold;
 }
+
 @media (max-width: 800px) {
     .section-servicos{
         max-width:750px;
